--- a/index.html
+++ b/index.html
@@ -40,15 +40,25 @@
         padding: 5px;
       }
     }
-
-    header, footer {
-      background-color: #333;
+header{
       color: white;
       padding: 10px 20px;
       justify-content: space-between;
       flex-wrap: wrap;
+      background: linear-gradient(135deg, #06b6d4, #34d399, #3b82f6);
+      background-size: 250% 200%;
+      animation: gradientShift 12s ease infinite;
+      color: #fff;
+      text-align: center;
+      position: relative;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
-header{position: relative;}
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
     .logo-section {
       display: flex;
       align-items: center;
@@ -77,7 +87,7 @@ header{position: relative;}
     }
 .loader {
   border: 6px solid #f3f3f3;
-  border-top: 6px solid #007bff;
+  border-top: 6px solid #bfff00;
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -124,32 +134,65 @@ header{position: relative;}
     .controls input:focus {
       box-shadow: 0 0 0 3px #007bff88;
     }
-.scroll-link {
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
-    background-color: #bfff00;
-    color: #111;
-    padding: 10px;
-    margin: 0px auto;
-    border-radius: 8px;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 0.75rem;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 229, 255, 0.3);
-  }
+    /* Tab container */
+    .tab-container {
+      display: flex;
+      justify-content: center;
+      background: #ffffff;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 2;
+      max-width: 600px;
+      margin: 0 auto;
+      border-radius: 0 0 10px 10px;
+      overflow: hidden;
+    }
 
-  .scroll-link:hover {
-    background-color: #7fff00;
-    color: #1e1e1e;
-  }
-  .scroll-link .linksvg{height: 25px;width:25px;transform:rotate(-25deg)}
+    .tab-container a {
+      flex: 1;
+      text-align: center;
+      padding: 16px 0;
+      background: linear-gradient(to top, #20bb99 0%, #bff900 100%);
+      color: #fff;
+      text-decoration: none;
+      font-size: 1.1rem;
+      font-weight: 600;
+      border-right: 1px solid rgba(255, 255, 255, 0.4);
+      transition: all 0.3s ease;
+      position: relative;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+    }
+
+    .tab-container a:last-child {
+      border-right: none;
+    }
+
+    .tab-container a:hover {
+      background: linear-gradient(135deg, #0891b2 0%, #16a34a 100%);
+      transform: translateY(-2px);
+    }
+
+    .tab-container a::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background: #ffffff;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+
+    .tab-container a:hover::after {
+      opacity: 0.4;
+    }
     .game-card {
       background: #1e1e1e;
       border-radius: 8px;
       padding: 10px;
-      margin: 10px 0;
+      margin: 15px 0;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       display: flex;
       gap: 15px;
@@ -157,7 +200,7 @@ header{position: relative;}
       transition: background 0.3s, color 0.3s;
       position: relative;
       overflow: hidden;
-      border: 0.2px solid rgba(255, 140, 0, 0.5);
+      border: 1.5px solid rgba(255, 140, 0, 0.5);
     }
 .game-card:before {
     content: "Mod";
@@ -176,7 +219,7 @@ header{position: relative;}
     box-shadow: 0 2px 5px rgba(0,0,0,0.25);
 }
     .light-mode .game-card {
-      background: white;
+      background: #fffaf9;
       color: #000;
     }
 
@@ -228,6 +271,7 @@ header{position: relative;}
       display: flex;
       align-items: center;
       text-align: center;
+      font-weight: 500;
       margin: 0 15px;
       padding: 10px 15px;
       font-size: 14px;
@@ -290,6 +334,8 @@ header{position: relative;}
     }
   .light-mode .step p{color:#1e1e1e}
     footer {
+      justify-content: space-between;
+      flex-wrap: wrap;
   text-align: center;
   margin-top: 40px;
   background-color: #333;
@@ -305,6 +351,7 @@ header{position: relative;}
   color: #fff;
   display: none;            /* hidden by default */
   flex-direction: column;
+  z-index: 5;
 }
 
 .modal-header {
@@ -420,10 +467,10 @@ header{position: relative;}
       display: flex;
       justify-content: center;
       align-items: center;
+      z-index: 6;
      /* background: inherit;*/
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-  z-index: 1;
     }
 
     .popup {
@@ -489,6 +536,7 @@ header{position: relative;}
   height: 320px;
   object-fit: cover;
   display: block;
+/* visibility: hidden;*/
 }
 
 .slide-content {
@@ -498,12 +546,12 @@ header{position: relative;}
   padding: 16px;
   background: linear-gradient(
     to top,
-    rgba(0, 0, 0, 0.7) 0%,
-    rgba(0, 0, 0, 0.5) 30%,
-    rgba(0, 0, 0, 0.2) 60%,
+    rgba(0, 0, 0, 0.70) 35%,
+    rgba(0, 0, 0, 0.50) 60%,
+    rgba(0, 0, 0, 0.20) 75%,
     rgba(0, 0, 0, 0) 100% 
   );
-  backdrop-filter: blur(1px);
+  backdrop-filter: blur(0px);
   color: white;
   gap: 12px;
   position: absolute;
@@ -562,10 +610,10 @@ header{position: relative;}
 /* Dots */
 .dots {
   position: absolute;
-  bottom: 12px;
+  bottom: 10px;
   width: 100%;
   text-align: center;
-  z-index: 2;
+  z-index: 1;
 }
 
 .dot {
@@ -617,7 +665,7 @@ header{position: relative;}
 /* Responsive */
 @media (max-width: 480px) {
   .cover-img {
-    height: 200px;
+    height: 240px;
   }
   .app-logo {
     width: 50px;
@@ -668,16 +716,17 @@ header{position: relative;}
 </svg>
         <input type="text" id="searchBox" placeholder="Search for a game..." />
       </div>
-<center><a class="scroll-link" href="#how-it-works"><svg class="linksvg" version="1.1" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-<path transform="scale(.83333)" d="m12 17.002v-0.009375m0-2.1328c0-3.2156 3-2.5031 3-5.0016 0-1.5797-1.3453-2.8594-3-2.8594-1.3453 0-2.4797 0.84375-2.8641 2.0016m11.864 3c0 4.9688-4.0312 9-9 9s-9-4.0312-9-9 4.0312-9 9-9 9 4.0312 9 9zm0 0" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"/>
-</svg>How It Works</a></center>
+<div class="tab-container">
+    <a href="#gamesContainer">Games List</a>
+    <a href="#how-it-works">How It Works?</a>
+  </div>
       <div id="gamesContainer">
   <div class="loader"></div>
 </div>
       <div class="pagination" id="pagination"></div>
     </div>
  <div id="how-it-works">
-    <h3>How It Works</h3>
+    <h3>How It Works?</h3>
     <div class="steps">
       <div class="step">
         <div class="step-icon"><svg class="steps-icons" xmlns="http://www.w3.org/2000/svg" fill="none"
