--- a/download.html
+++ b/download.html
@@ -45,53 +45,54 @@
       }
     }
 
-    header, footer {
-      background-color: #333;
+    header{
       color: white;
-      padding: 10px 20px;
+      padding: 15px 20px;
       justify-content: space-between;
       flex-wrap: wrap;
-    }
-
-    header {
+      background: linear-gradient(135deg, #3b8922, #20bb99);
+     /* background: linear-gradient(135deg, #06b6d4, #0b4390, #3b82f6);*/
+      background-size: 140% 150%;
+      animation: gradientShift 10s ease infinite;
+      color: #fff;
+      text-align: center;
       position: relative;
+     /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);*/
     }
 
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
     .logo-section {
       display: flex;
       align-items: center;
       gap: 10px;
+    
     }
-
-    .logo-section img {
-      padding: 0;
-      margin: 0;
-      scale: 1.1;
+    .logo-section img{
+      padding: 5px;
+      margin-left: 10px;
+      height: 60px;
+      scale: 1.35;
     }
-
     .toggle-section {
-      font-size: 18px;
       cursor: pointer;
       position: absolute;
       top: 50%;
       right: 20px;
       transform: translateY(-50%);
     }
-
-    header img {
-      height: 50px;
-      border-radius: 4px;
-    }
-
-    .loader {
-      border: 6px solid #f3f3f3;
-      border-top: 6px solid #007bff;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
-      margin: 50px auto;
-    }
+.loader {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #bfff00;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin: 50px auto;
+}
 
     @keyframes spin {
       0% { transform: rotate(0deg); }
@@ -189,8 +190,10 @@ ol,ul {
 }
 
     footer {
+      justify-content: space-between;
+      flex-wrap: wrap;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 40px;
   background-color: #333;
   color: white;
   padding: 10px 20px;
@@ -203,7 +206,7 @@ ol,ul {
       <div class="container">
         <div class="logo-section">
           <a href="/">
-          <img src="https://i.ibb.co/vxv6Bn2y/Picsart-25-05-15-22-23-06-229.png" alt="Logo" />
+           <img src="https://i.ibb.co/gLs89v6W/Picsart-25-06-05-18-11-18-101.png" alt="GamesLand" />
           </a>
         </div>
         <div class="toggle-section" onclick="toggleDarkMode()" id="themeToggle">
@@ -227,7 +230,7 @@ ol,ul {
       </div>
       </div>
     <footer>
-      <span>&copy; 2025 <span style="color:#bfff00">GamesLand</span> - v1.0.2</span>
+      <span>&copy; 2025 <span style="color:#bfff00">GamesLand</span> - v1.0.5</span>
     </footer>
   </div>
 <script>
