--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@ header{
       padding: 10px 20px;
       justify-content: space-between;
       flex-wrap: wrap;
-      background: linear-gradient(135deg, #06b6d4, #34d399, #3b82f6);
-      background-size: 250% 200%;
-      animation: gradientShift 12s ease infinite;
+      background: linear-gradient(135deg, #3b8922, #20bb99);
+     /* background: linear-gradient(135deg, #06b6d4, #0b4390, #3b82f6);*/
+      background-size: 140% 150%;
+      animation: gradientShift 10s ease infinite;
       color: #fff;
       text-align: center;
       position: relative;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+     /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);*/
     }
 
     @keyframes gradientShift {
@@ -66,24 +67,17 @@ header{
     
     }
     .logo-section img{
-     // background:red;
-      padding: 0px;
-      margin: 0;
-      scale: 1.1;
+      padding: 5px;
+      margin-left: 10px;
+      height: 60px;
+      scale: 1.15;
     }
     .toggle-section {
-      font-size: 18px;
       cursor: pointer;
       position: absolute;
-  top: 50%;
-  right: 20px;           /* tweak as needed */
-  transform: translateY(-50%);
- 
-    }
-
-    header img {
-      height: 50px;
-      border-radius: 4px;
+      top: 50%;
+      right: 20px;
+      transform: translateY(-50%);
     }
 .loader {
   border: 6px solid #f3f3f3;
@@ -153,7 +147,7 @@ header{
       flex: 1;
       text-align: center;
       padding: 16px 0;
-      background: linear-gradient(to top, #20bb99 0%, #bff900 100%);
+      background: linear-gradient(to top, #20bb99 0%, #3b8922 100%);
       color: #fff;
       text-decoration: none;
       font-size: 1.1rem;
@@ -688,7 +682,7 @@ header{
       <div class="container">
         <div class="logo-section">
           <a href="/">
-          <img src="https://i.ibb.co/vxv6Bn2y/Picsart-25-05-15-22-23-06-229.png" alt="Logo" />
+          <img src="https://i.ibb.co/gLs89v6W/Picsart-25-06-05-18-11-18-101.png" alt="GamesLand" />
           </a>
         </div>
         <div class="toggle-section" onclick="toggleDarkMode()" id="themeToggle">
@@ -772,7 +766,7 @@ header{
       </div>
     </div>
   </div>
-    <footer><span>&copy; 2025 <span style="color:#bfff00">GamesLand</span> - v1.0.3</span></footer>
+    <footer><span>&copy; 2025 <span style="color:#bfff00">GamesLand</span> - v1.0.5</span></footer>
     <!-- Modal overlay -->
 <div id="cardModal" class="modal">
   <div class="modal-header">
