--- a/index.html
+++ b/index.html
@@ -104,18 +104,21 @@ header{
     }
 
     .controls input {
-      padding: 15px 5px 15px 40px;
+      padding: 15px 10px 15px 50px;
       font-size: 16px;
       border: none;
-      border-radius: 30px;
+      border-radius: 15px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
       outline: none;
       transition: box-shadow 0.3s ease;
-      width: 88%;
+      width: 84%;
       max-width: 400px;
-     background: rgba(255,255,255,0.3);
+     background: rgba(255,255,255,0.1);
       color: white;
     }
+  .light-mode .controls input{
+    color: #000;
+  }
  :not(.light-mode) .controls input::placeholder {
   color: #ccc; /* Light gray, for example */
 }
@@ -203,7 +206,7 @@ header{
       transition: background 0.3s, color 0.3s;
       position: relative;
       overflow: hidden;
-      border: 1.5px solid rgba(255, 140, 0, 0.5);
+      border: 2px solid rgba(255, 140, 0, 0.8);
     }
 .game-card:before {
     content: "Mod";
@@ -222,7 +225,7 @@ header{
     box-shadow: 0 2px 5px rgba(0,0,0,0.25);
 }
     .light-mode .game-card {
-      background: #fffaf9;
+      background: #f7fff9;
       color: #000;
     }
 
