--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ header{
       padding: 10px 20px;
       justify-content: space-between;
       flex-wrap: wrap;
-      background: linear-gradient(135deg, #3b8922, #20bb99);
+      background: linear-gradient(135deg, #20ab53, #20ab8f);
      /* background: linear-gradient(135deg, #06b6d4, #0b4390, #3b82f6);*/
-      background-size: 140% 150%;
+      background-size: 220% 200%;
       animation: gradientShift 10s ease infinite;
       color: #fff;
       text-align: center;
@@ -98,9 +98,9 @@ header{
       margin: 20px auto;
       position: relative;
       border: none;
-      border-radius: 30px;
-      width: 95℅;
-      max-width: 400px;
+      border-radius: 15px;
+      width: 90℅;
+      max-width: 600px;
     }
 
     .controls input {
@@ -111,8 +111,8 @@ header{
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
       outline: none;
       transition: box-shadow 0.3s ease;
-      width: 84%;
-      max-width: 400px;
+      width: 85%;
+      max-width: 600px;
      background: rgba(255,255,255,0.1);
       color: white;
     }
@@ -479,43 +479,79 @@ header{
   -webkit-backdrop-filter: blur(5px);
     }
 
-    .popup {
-      background: linear-gradient(135deg, #1f1f1f, #2e2e2e);
-      padding: 30px;
-      text-align: center;
-      border-radius: 12px;
-      max-width: 350px;
-      width: 85%;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2), 0 0 10px rgba(0, 0, 0, 0.5);
-      border: 1px solid #999;
-      z-index: 1;
-    }
-
-    .popup img {
+    #popup {
+      background: linear-gradient(to right, #e5ffd6, #d6fff4);
+      padding: 20px;
+      border-radius: 10px;
       width: 90%;
-      margin-bottom: 20px;
+      max-width: 400px;
+      margin: 10px;
+      text-align: center;
+      animation: slideIn 0.3s ease-out;
     }
 
-    .popup h3 {
-      color: #fff;
+    @keyframes slideIn {
+      from { transform: translateY(-50px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    #popup img {
+      height: 80px;
+      margin-bottom: 10px;
+      filter: invert(100%) sepia(100%) saturate(10000%) hue-rotate(0deg);
+    }
+
+    #popup h2 {
+      font-size: 20px;
+      color: #000;
+      margin-bottom: 15px;
+    }
+
+    #popup p {
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 20px;
+      color: #555;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    #popup .ploader {
+      border: 2px solid #f3f3f3;
+      border-top: 2px solid #409;
+      border-radius: 50%;
+      width: 18px;
+      height: 18px;
+      animation: pspin 1s linear infinite;
+      display: inline-block;
+    }
+
+    @keyframes pspin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
     .progress-bar {
       width: 100%;
-      background: linear-gradient(to right, #8e8e8e, #cacaca, #8e8e8e);
-      border-radius: 20px;
+      height: 10px;
+      background-color: #e0e0e0;
+      border-radius: 5px;
       overflow: hidden;
-      height: 20px;
-      margin-top: 20px;
-      border: 1px solid #999;
     }
 
-    .progress-fill {
+    .progress {
+      width: 0;
       height: 100%;
-      width: 0%;
-      background: linear-gradient(to right, #bfff, #bea, #bfff00);
-      transition: width 5s linear;
+      background-color: #28a745;
+      transition: width 0.5s linear;
     }
+
+    .popup svg {
+      vertical-align: middle;
+    }
+
   /* slider ########## */
 .slider {
   position: relative;
@@ -1102,24 +1138,68 @@ window.addEventListener("popstate", () => {
     const overlay = document.createElement('div');
     overlay.className = 'overlay';
     overlay.innerHTML = `
-      <div class="popup">
-        <img src="https://i.ibb.co/vxv6Bn2y/Picsart-25-05-15-22-23-06-229.png" alt="Logo">
-        <h3>GamesLand Download Center</h3>
-        <div class="progress-bar">
-          <div class="progress-fill"></div>
-        </div>
+      <div id="popup">
+        <img src="https://i.ibb.co/gLs89v6W/Picsart-25-06-05-18-11-18-101.png" alt="Logo">
+        <h2>Download Center</h2>
+              <p id="modalText">Checking Game <span class="ploader"></span></p>
+      <div class="progress-bar">
+        <div class="progress" id="progressBar"></div>
+      </div>
       </div>
     `;
     document.body.appendChild(overlay);
+const modal = document.getElementById('popup');
+    const modalText = document.getElementById('modalText');
+    const progressBar = document.getElementById('progressBar');
 
-    setTimeout(() => {
-      overlay.querySelector('.progress-fill').style.width = '100%';
-    }, 50);
+    const svgCheck = `
+      <svg width="25" height="25" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path d="M9.5588 3.6972c1.1964-1.675 3.6859-1.675 4.8824 0l0.1905 0.26667c0.2105 0.2948 0.5641 0.45265 0.9241 0.41265l0.849-0.09434c1.9108-0.2123 3.5253 1.4022 3.313 3.313l-0.0943 0.84902c-0.04 0.36005 0.1178 0.71359 0.4126 0.92416l0.2667 0.19048c1.675 1.1964 1.675 3.6859 0 4.8824l-0.2667 0.1905c-0.2948 0.2105-0.4526 0.5641-0.4126 0.9241l0.0943 0.849c0.2123 1.9108-1.4022 3.5253-3.313 3.313l-0.849-0.0943c-0.36-0.04-0.7136 0.1178-0.9241 0.4126l-0.1905 0.2667c-1.1965 1.675-3.6859 1.675-4.8824 0l-0.19048-0.2667c-0.21057-0.2948-0.56411-0.4526-0.92417-0.4126l-0.84901 0.0943c-1.9107 0.2123-3.5252-1.4022-3.313-3.313l0.09434-0.849c0.04-0.36-0.11785-0.7136-0.41265-0.9241l-0.26667-0.1905c-1.675-1.1965-1.675-3.6859 0-4.8824l0.26667-0.19048c0.2948-0.21057 0.45265-0.56411 0.41265-0.92417l-0.09434-0.84901c-0.2123-1.9107 1.4022-3.5252 3.313-3.313l0.84902 0.09434c0.36005 0.04 0.71359-0.11785 0.92416-0.41265l0.19048-0.26667zm6.1483 5.5957c0.3905 0.39053 0.3905 1.0237 0 1.4142l-3.8189 3.8189c-0.4905 0.4906-1.2859 0.4906-1.7764 0l-1.8189-1.8189c-0.39052-0.3905-0.39052-1.0237 0-1.4142 0.39053-0.3905 1.0237-0.3905 1.4142 0l1.2929 1.2929 3.2929-3.2929c0.3905-0.39052 1.0237-0.39052 1.4142 0z" clip-rule="evenodd" fill="#28a745" fill-rule="evenodd"/>
+      </svg>`;
+    const svgExclamation = `
+      <svg width="24" height="24" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
+        <path d="M512 64a448 448 0 1 1 0 896 448 448 0 0 1 0-896zm0 192a58.432 58.432 0 0 0-58.24 63.744l23.36 256.384a35.072 35.072 0 0 0 69.76 0l23.296-256.384A58.432 58.432 0 0 0 512 256zm0 512a51.2 51.2 0 1 0 0-102.4 51.2 51.2 0 0 0 0 102.4z" fill="#d99011"/>
+      </svg>`;
 
-    setTimeout(() => {
-      overlay.remove();
-      window.location.href = link;
-    }, 5000);
+    
+
+    function startTextAnimation() {
+      const texts = ['1/4 Checking Game', '2/4 Preparing Game Resources', '3/4 Generate Links', '4/4 Human Verification', 'Redirecting to Verification Page'];
+      const progressSteps = [5, 33, 65, 86, 100];
+      let index = 0;
+
+      function updateText() {
+        if (index < texts.length) {
+          // Use loader for first four steps, dots for the last step
+          modalText.innerHTML = index < 4 
+            ? `${texts[index]} <span class="ploader"></span>`
+            : `${texts[index]} ...`;
+          progressBar.style.width = `${progressSteps[index]}%`;
+
+          if (index < 4) { // Apply icons only for first four steps
+            setTimeout(() => {
+              const icon = index === 3 ? svgExclamation : svgCheck;
+              modalText.innerHTML = `${texts[index]} ${icon}`;
+              index++;
+              setTimeout(updateText, 1500); // Next text after 1.5s
+            }, 1500); // Show loader for 1.5s
+          } else {
+            // Keep dots for "Redirecting" step
+            setTimeout(() => {
+              index++;
+              updateText();
+            }, 1500); // Move to redirect after 1.5s
+          }
+        } else {
+          setTimeout(() => {
+            window.location.href = link;
+          }, 500);
+        }
+      }
+      updateText();
+    }
+
+    startTextAnimation();
   }
   // slider
 function showSlider(){
