--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ header{
     }
   .light-mode .controls input{
     color: #000;
+    background: #f7fff9;
   }
  :not(.light-mode) .controls input::placeholder {
   color: #ccc; /* Light gray, for example */
@@ -235,12 +236,13 @@ header{
 .game-card:before {
     content: "Mod";
     position: absolute;
-    top: 0px;
-    right: -32px;
+    top: -7px;
+    left: -37px;
     width: 75px;
     text-align: center;
-    transform: rotate(45deg);
+    transform: rotate(-45deg);
     background: #2ad199;
+    border-top: 10px solid #2ad199;
     padding: 8px 12px;
     color: white;
     font-size: 12px;
@@ -330,15 +332,16 @@ header{
     .steps {
       display: grid;
       grid-template-columns: repeat(2, 1fr); /* 2x2 layout always */
-      gap: 0px;
+      gap: 15px;
+      padding: 8px 15px;
     }
 
     .step {
-      background-color: #1e1e1e;
+      background-color: rgba(255,255,255,0.12);
       border-radius: 10px;
       padding: 20px;
       text-align: center;
-      margin: 10px;
+      /*margin: 10px;*/
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       transition: background 0.3s, color 0.3s;
     }
@@ -346,9 +349,8 @@ header{
     .step-icon {
       font-size: 2em;
       margin-bottom: 10px;
-      color: #bfff00;
+      color: var(--primary-color);
     }
-    .light-mode .step-icon{color:#7fff00;}
 .steps-icons {
   width: 35px;
   height: 35px;
@@ -603,7 +605,7 @@ header{
   height: 320px;
   object-fit: cover;
   display: block;
-/* visibility: hidden;*/
+/*visibility: hidden;*/
 }
 
 .slide-content {
@@ -613,9 +615,10 @@ header{
   padding: 16px;
   background: linear-gradient(
     to top,
-    rgba(0, 0, 0, 0.70) 35%,
-    rgba(0, 0, 0, 0.50) 60%,
-    rgba(0, 0, 0, 0.20) 75%,
+    rgba(0, 0, 0, 0.60) 35%,
+    rgba(0, 0, 0, 0.55) 60%,
+    rgba(0, 0, 0, 0.3) 75%,
+    rgba(0, 0, 0, 0.2) 90%,
     rgba(0, 0, 0, 0) 100% 
   );
   backdrop-filter: blur(0px);
@@ -641,7 +644,7 @@ header{
   border-radius: 12px;
   object-fit: cover;
   flex-shrink: 0;
-  border: 0.4px solid rgba(204,204,204,0.4);
+  border: 0.4px solid rgba(255,255,234,0.45);
 }
 
 .app-title {
@@ -653,7 +656,7 @@ header{
   text-overflow: ellipsis;
   max-width: 250px;
   flex-shrink: 1;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.64);
 }
 
 .download-btn {
