--- a/admin.html
+++ b/admin.html
@@ -128,6 +128,18 @@
       background-color: #198754;
     }
 
+    #uploadInternetBtn {
+      background-color: #fd7e14;
+      color: white;
+      font-weight: bold;
+      border: none;
+      margin-top: 10px;
+    }
+
+    #uploadInternetBtn:hover {
+      background-color: #e06c00;
+    }
+
     .file-upload {
       position: relative;
       display: flex;
@@ -175,6 +187,7 @@
       color: white;
       border: none;
       font-weight: bold;
+      margin-top: 10px;
     }
 
     #copyBtn:hover {
@@ -393,12 +406,13 @@
       <button id="addGameBtn">Add Game</button>
       <button id="clearBtn">Clear</button>
     </div>
-    <button id="downloadBtn">Download JSON</button>
     <div class="file-upload">
       <input type="file" id="uploadJson" accept=".json" />
       <label for="uploadJson">Upload JSON</label>
       <span id="fileName">No file selected</span>
     </div>
+    <button id="uploadInternetBtn">Upload from Internet</button>
+    <button id="downloadBtn">Download JSON</button>
     <button id="copyBtn" onclick="copyJSONToClipboard()">Copy JSON to Clipboard</button>
   </div>
   <h2 id="gameCount" style="margin-bottom: 10px; color: #444;"></h2>
@@ -593,7 +607,7 @@
           }));
           saveToLocalStorage();
           renderGames();
-          toggleIosLink(); // Update iosLink state after upload
+          toggleIosLink();
           alert("Games loaded successfully.");
         } else {
           alert("Invalid JSON structure.");
@@ -603,6 +617,45 @@
       }
     };
     reader.readAsText(file);
+  };
+
+  const uploadFromInternet = async () => {
+    try {
+      const response = await fetch("https://api.jsonbin.io/v3/b/68234c858561e97a50131282", {
+        headers: {
+          "X-Access-Key": "$2a$10$gSgfYlP3hTZUvhD66Vr0ReHzaQdcR/c0oi9rzQeM7/xDQb0pYfen2"
+        }
+      });
+
+      if (!response.ok) {
+        throw new Error(`HTTP error! Status: ${response.status}`);
+      }
+
+      const data = await response.json();
+      const result = data.record; // JSONBin API wraps data in a 'record' field
+
+      if (Array.isArray(result)) {
+        games = result.map(game => ({
+          ...game,
+          id: game.id || Date.now() + Math.random(),
+          logoUrl: game.logoUrl || "",
+          coverUrl: game.coverUrl || "",
+          androidLink: game.androidLink || "",
+          iosLink: game.iosLink || "",
+          appleStoreVisible: game.appleStoreVisible !== undefined ? game.appleStoreVisible : false,
+          isFeatured: game.isFeatured !== undefined ? game.isFeatured : false
+        }));
+        saveToLocalStorage();
+        renderGames();
+        toggleIosLink();
+        alert("Games loaded successfully from the internet.");
+      } else {
+        alert("Invalid JSON structure from the internet.");
+      }
+    } catch (error) {
+      alert("Error fetching or parsing JSON from the internet.");
+      console.error(error);
+    }
   };
 
   addGameBtn.addEventListener("click", () => {
@@ -632,6 +685,8 @@
     const file = this.files[0];
     if (file) uploadJSON(file);
   });
+
+  document.getElementById("uploadInternetBtn").addEventListener("click", uploadFromInternet);
 
   function copyJSONToClipboard() {
     if (!games.length) {
