--- a/index.html
+++ b/index.html
@@ -406,6 +406,36 @@ header{
   padding: 20px;
   box-sizing: border-box;
 }
+.modal-logo img{max-height:300px;}
+.modal-logo {
+  position: relative;
+  margin-top:10px;
+  padding: 0px;width:100%;height:100%;max-height:300px;
+  display: inline-block;
+  border: 2px solid #bfff00;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.modal-logo::after {
+  content: "Mod";
+  position: absolute;
+  right: -2px;
+  top: -1px;
+  background: linear-gradient(to right,#a5d90b,#48b50d);
+  /*border-right: 2px solid #13e8e4;*/
+  z-index: 5;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.44);
+  color: white;
+  width: 100px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 0 0 0 20px;
+}
 .modal-content h3{font-family: 'Orbitron',Sans-Serif}
 .modal-content .rating{font-size:1.5rem}
 .dw-button{
@@ -432,12 +462,6 @@ header{
             color: #fff;
             text-decoration: none;
           }
-         
-.green-yellow-button:hover {
-  transform: scale(1.05);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-
-}
 /* ###### iinstallation guide ######*/
     .insta-button {
       background-color: #7bbb1;
@@ -613,10 +637,11 @@ header{
   padding: 16px;
   background: linear-gradient(
     to top,
-    rgba(0, 0, 0, 0.60) 35%,
-    rgba(0, 0, 0, 0.55) 60%,
-    rgba(0, 0, 0, 0.3) 75%,
-    rgba(0, 0, 0, 0.2) 90%,
+    rgba(0, 0, 0, 0.58) 25%,
+    rgba(0, 0, 0, 0.48) 46%,
+    rgba(0, 0, 0, 0.38) 60%,
+    rgba(0, 0, 0, 0.20) 80%,
+    rgba(0, 0, 0, 0.1) 90%,
     rgba(0, 0, 0, 0) 100% 
   );
   backdrop-filter: blur(0px);
@@ -971,9 +996,8 @@ function launchModel(game){
     // build modal inner HTML
     document.getElementById('modalContent').innerHTML = `
       <div style="text-align:center; max-width:300px; margin:0 auto;">
-        <img src="${selected.logoUrl}"
-             alt="${selected.name} logo"
-             style="margin-top:10px;width:100%;height:100%;max-height:300px; border-radius:8px;"/>
+        <div class="modal-logo"><img src="${selected.logoUrl}"
+             alt="${selected.name} logo"/></div>
         <h2 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h2><span class="rating">${getStarRatingHTML(selected.rate)}</span> <span>${selected.rate}</span>
         <p><strong style="color:#bfff00">Version:</strong> ${selected.version}</p>
         <p><strong style="color:#bfff00">Size:</strong> ${selected.size || 'N/A'}</p>
