--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
 
     .light-mode {
-      background: #f2f2f2;
+      background: #eff7f5;
       color: #000;
     }
 
@@ -33,8 +33,12 @@
       max-width: 800px;
       width: 100%;
       margin: 0 auto;
+      border-right: 1px solid #bde5dd;
+      border-left: 1px solid #bde5dd;
     }
-
+.light-mode .site-wrapper{
+  background: #e7efee;
+}
     .container {
       padding: 20px;
     }
@@ -99,8 +103,8 @@ header{
       position: relative;
       border: none;
       border-radius: 15px;
-      width: 90℅;
-      max-width: 600px;
+      width: 100℅;
+      max-width: 800px;
     }
 
     .controls input {
@@ -111,8 +115,8 @@ header{
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
       outline: none;
       transition: box-shadow 0.3s ease;
-      width: 85%;
-      max-width: 600px;
+      width: calc(100% - 64px);
+      max-width: 800px;
      background: rgba(255,255,255,0.1);
       color: white;
     }
@@ -150,7 +154,7 @@ header{
       position: sticky;
       top: 0;
       z-index: 2;
-      max-width: 600px;
+      max-width: 800px;
       margin: 0 auto;
       border-radius: 0 0 10px 10px;
       overflow: hidden;
@@ -388,6 +392,7 @@ header{
   padding: 20px;
   width:100%;
   max-width: 800px;
+  margin: 0 auto;
 }
 
 .back-arrow {
@@ -407,12 +412,17 @@ header{
   overflow: auto;
   padding: 20px;
   box-sizing: border-box;
+  margin: 0 auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  text-align: center;
 }
+.modal-content::-webkit-scrollbar{display: none;}
 .modal-logo img{max-height:300px;}
 .modal-logo {
   position: relative;
   margin-top:10px;
-  padding: 0px;width:100%;height:100%;max-height:300px;
+  padding: 0px;width:max-content;height:100%;max-height:300px;
   display: inline-block;
   border: 2px solid #bfff00;
   border-radius: 20px;
@@ -1042,8 +1052,7 @@ function launchModel(game){
     const selected = allGames.find(g => g.id === game);
     // build modal inner HTML
     document.getElementById('modalContent').innerHTML = `
-      <div style="text-align:center; max-width:300px; margin:0 auto;">
-        <div class="modal-logo"><img src="${selected.logoUrl}"
+      <div style=""> <div class="modal-logo"><img src="${selected.logoUrl}"
              alt="${selected.name} logo"/></div>
         <h2 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h2><span class="rating">${getStarRatingHTML(selected.rate)}</span> <span>${selected.rate}</span>
         <p><strong style="color:#bfff00">Version:</strong> ${selected.version}</p>
