--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@ header{
 }
 
 .modal-content {
-  flex: 1;
-  width: 90℅;
+ /* flex: 1;*/
+  width: 100℅;
   max-width: 800px;
   display: flex;
   align-items: flex-start;
@@ -410,7 +410,7 @@ header{
   font-size: 20px;
   /* allow scrolling if it overflows */
   overflow: auto;
-  padding: 20px;
+  padding: 20px 35px;
   box-sizing: border-box;
   margin: 0 auto;
   scrollbar-width: none;
@@ -424,7 +424,7 @@ header{
   margin-top:10px;
   padding: 0px;width:max-content;height:100%;max-height:300px;
   display: inline-block;
-  border: 2px solid #bfff00;
+  border: 2px solid #48b50c;
   border-radius: 20px;
   overflow: hidden;
 }
@@ -451,10 +451,10 @@ header{
 .modal-content h3{font-family: 'Orbitron',Sans-Serif}
 .modal-content .rating{font-size:1.5rem}
 .dw-button{
- background: linear-gradient(to bottom, #1bb 0%, #0b8793  90%);
- background-size: 200℅;
+ background: linear-gradient(to bottom, #89cb0b 0%, #19a10a  90%);
+ background-size: 200%;
   color: rgba(255,255,255,1);
-  text-shadow: 2px 2px 4px #0b8796;
+  text-shadow: 1px 1px 4px #04651b;
   padding: 15px 25px;
   text-transform: uppercase;
   margin: 0 auto;
@@ -476,13 +476,14 @@ header{
           }
 /* ###### iinstallation guide ######*/
     .insta-button {
-      background-color: #7bbb1;
-      color: #000;
+      background-color: #abc;
+      color: #043c08;
+      font-weight: bold;
       padding: 10px 20px;
       border: none;
       margin: 5px auto;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 15px;
       border-radius: 8px;
       display: flex;
       align-items: center;
@@ -1052,7 +1053,7 @@ function launchModel(game){
     const selected = allGames.find(g => g.id === game);
     // build modal inner HTML
     document.getElementById('modalContent').innerHTML = `
-      <div style=""> <div class="modal-logo"><img src="${selected.logoUrl}"
+      <div> <div class="modal-logo"><img src="${selected.logoUrl}"
              alt="${selected.name} logo"/></div>
         <h2 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h2><span class="rating">${getStarRatingHTML(selected.rate)}</span> <span>${selected.rate}</span>
         <p><strong style="color:#bfff00">Version:</strong> ${selected.version}</p>
@@ -1060,7 +1061,7 @@ function launchModel(game){
         <p><strong style="color:#bfff00">Last Update:</strong> ${selected.updateDate}</p>
        <div id="sh-slider-container" class="sh-slider-container">
     <div id="sh-slider" class="sh-slider"></div>
-  </div><h4 style="color:#bfff00">About Game:</h4><p style="text-align:left;font-size:1rem;line-height:1.8">${selected.description}</p><h4 style="color:#bfff00">Mod Features:</h4>${styleMods(selected.modFeatures)}<br/><h6 style="font-size: 14px;margin:10px 0px;font-weight:600">Available for: ${selected.appleStoreVisible ? "Android & iOS" : "Android"}</h6><button class="dw-button" onclick="goToLocker(${selected.id},'${selected.lockerLink}')">Download (${selected.size}) <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2"
+  </div><h4 style="color:#bfff00">About Game:</h4><p style="text-align:left;font-size:1rem;line-height:1.8">${selected.description}</p><h4 style="color:#bfff00">Mod Features:</h4>${styleMods(selected.modFeatures)}<br/><h6 style="font-size: 14px;margin:10px 0px;font-weight:600;color:#ddd;text-shadow:1px 1px 4px #031c1c">Available for: ${selected.appleStoreVisible ? "Android & iOS" : "Android"}</h6><button class="dw-button" onclick="goToLocker(${selected.id},'${selected.lockerLink}')">Download (${selected.size}) <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2"
     stroke-linecap="round" stroke-linejoin="round" class="feather feather-download">
   <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
   <polyline points="7 10 12 15 17 10" />
