--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GamesLand</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Roboto&display=swap" rel="stylesheet">
-  <link rel="icon" sizes="180x180" href="https://i.ibb.co/2Ym0rBwB/apple-touch-icon.png">
+  <link rel="icon" sizes="180x180" href="https://i.ibb.co/G4MbmWnk/Picsart-25-06-09-15-37-00-247.png">
   <!-- <script src="/shield.js"></script> -->
   <style>
   :root{
@@ -424,7 +424,7 @@ header{
   margin-top:10px;
   padding: 0px;width:max-content;height:100%;max-height:300px;
   display: inline-block;
-  border: 2px solid #48b50c;
+  box-shadow: 0px 0px 8px rgba(187, 255, 0,0.8),-0px -0px 8px rgba(187, 255, 0,0.8);
   border-radius: 20px;
   overflow: hidden;
 }
