--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>GamesLand | Modded Games for Android & iOS</title>
 <meta name="description" content="GamesLand provides safe, updated modded games for Android and iOS. Unlock premium features, unlimited resources, and enjoy enhanced gameplay for free.">
 <meta name="robots" content="index, follow">
+<meta name="google-site-verification" content="PGkR7hJs969wz_CLG3k3Im3CWgHH_z6iLUo2YmCztB4" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Roboto&display=swap" rel="stylesheet">
   <link rel="icon" sizes="180x180" href="https://i.ibb.co/G4MbmWnk/Picsart-25-06-09-15-37-00-247.png">
   <!-- <script src="/shield.js"></script> -->
